# bupa-codechallenge

./: .gitignore  README.md  pyproject.toml
inputDir/exchange_rates.json/: part-00000-519706f2-2905-4415-aa88-70e68a0298cd-c000.json
resources/exchange_rates_test_dedupe_records.json/: part-00000-b52f9b5b-e7e3-4c7e-a312-fe8aedba0578-c000.json
resources/exchange_rates_test_find_missingdates.json/: .part-00000-583c3c73-cd4f-434d-a238-d678300db04d-c000.json.crc  part-00000-583c3c73-cd4f-434d-a238-d678300db04d-c000.json
resources/exchange_rates_test_process.json/: .part-00000-fa64a062-d5dc-4695-a3cd-51ec66cec1b0-c000.json.crc  part-00000-fa64a062-d5dc-4695-a3cd-51ec66cec1b0-c000.json
resources/exchange_rates_test_validate_nullchecks.json/: .part-00000-8d5e3e09-117f-45be-a498-60d0f430d88f-c000.json.crc
resources/summary_rates_test.csv/: .part-00000-2584cafc-455a-46af-a51b-1a29e2a99842-c000.csv.crc
src/rates_analysis/: .coverage copy  convert_csv_to_json.py  convert_csv_to_json.py.bkp  exchange_analysis.py  exchange_assess_test.py
src/rates_analysis/inputDir/exchange_rates.json/: .part-00000-519706f2-2905-4415-aa88-70e68a0298cd-c000.json.crc
src/rates_analysis/outputDir/summary_rates.csv/: .part-00000-3458d03f-47d9-414c-822c-50f929017230-c000.csv.crc  part-00000-3458d03f-47d9-414c-822c-50f929017230-c000.csv
src/rates_analysis/resources/exchange_rates_test_dedupe_records.json/: .part-00000-b52f9b5b-e7e3-4c7e-a312-fe8aedba0578-c000.json.crc
src/rates_analysis/resources/summary_rates_test.csv/: part-00000-1f944fde-acd1-4a67-bb7a-52c47fe67f98-c000.csv
(+1 files in other folders)
